Wed May 24 23:52:11 2006  nobuyoshi nakada  <nobu@ruby-lang.org>

	* configure.in (ac_install_sh): ignore dummy install-sh.
	  [ruby-talk:193876]

Wed May 24 03:10:48 2006  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/lib/openssl/ssl.rb
	  (OpenSSL::SSL::SocketForwarder#setsockopt,getsockopt): typo fixed.

Mon May 22 17:54:12 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c (sock_recvfrom_nonblock): use rb_read_pending
	  instead of rb_io_read_pending.
	  [ruby-dev:28663]

Mon May 22 17:30:04 2006  Tanaka Akira  <akr@m17n.org>

	* rubyio.h (rb_io_set_nonblock): declared.

	* io.c (rb_io_set_nonblock): new function.
	  (io_getpartial): nonblocking read support.
	  (io_read_nonblock): new method: IO#read_nonblock.
	  (io_write_nonblock): new method: IO#write_nonblock.

	* ext/socket/socket.c
	  (sock_connect_nonblock): new method: Socket#connect_nonblock.
	  (sock_accept_nonblock): new method: Socket#accept_nonblock.
	  (sock_recvfrom_nonblock): new method: Socket#recvfrom_nonblock.

	  [ruby-core:7917]

Mon May 22 15:57:39 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (umethod_bind): should not update original class.
	  [ruby-dev:28636]

Mon May 22 13:38:57 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ev_const_get): should support constant access from
	  within instance_eval().  [ruby-dev:28327]

Thu May 18 17:51:32 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (time_timeval): should round for usec floating
	  number.  [ruby-core:07896]

	* time.c (time_add): ditto.

Thu May 18 17:11:45 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI::out): support utf-8.  a patch from Fujioka
	  <fuj@rabbix.jp>.  [ruby-dev:28649]

Thu May 18 00:42:12 2006  nobuyoshi nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb, lib/mkmf.rb: use BUILD_FILE_SEPARATOR in Makefiles.

Wed May 17 17:55:26 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (sys_warning): should not call a vararg function